# future-annotations

./: .gitignore  .pre-commit-config.yaml  README.md  future_annotations.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
testing/: fix_coverage.py  remove_pycdir.py
tests/: future_annotations_test.py
