[metadata]
name = future_annotations
version = 0.0.0
description = A backport of __future__ annotations to python<3.7
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/future-annotations
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = future_annotations
install_requires =
    tokenize-rt>=3
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    future-annotations-show=future_annotations:main

[options.extras_require]
rewrite =
    tokenize-rt>=3

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[coverage:covdefaults]
subtract_omit = */.tox/*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
